Finished wiring all elements currently present (except border speed - no support yet in TextSegment) and added support for fullscreen toggle to VisionGUI